--- a/Arquitectura de la información/index.html
+++ b/Arquitectura de la información/index.html
@@ -27,6 +27,10 @@
                         <li><a href="#"></a>Blog</li>
                     </ul>
                 </nav>
+                <div class="navbar-searching-tool">
+                    <img src="https://www.flaticon.es/icono-gratis/lupa_2319177?term=lupa&page=1&position=1&origin=tag&related_id=2319177"
+                        alt="icono-lupa">
+                </div>
             </div>
         </div>
     </header>
@@ -45,7 +49,7 @@
         </section>
         <section class="products">
             <div class="container">
-                <div class="card">
+                <article class="card">
                     <div class="card-description">
                         <h2>Ephone XII</h2>
                         <p>Lorem ipsum dolor sit.</p>
@@ -54,8 +58,8 @@
                     <div class="card-img">
                         <img src="" alt="">
                     </div>
-                </div>
-                <div class="card">
+                </article>
+                <article class="card">
                     <div class="card-description">
                         <h2>Ephone XIII</h2>
                         <p>Lorem ipsum dolor sit.</p>
@@ -64,8 +68,8 @@
                     <div class="card-img">
                         <img src="" alt="">
                     </div>
-                </div>
-                <div class="card">
+                </article>
+                <article class="card">
                     <div class="card-description">
                         <h2>Ephone XI</h2>
                         <p>Lorem ipsum dolor sit.</p>
@@ -74,7 +78,7 @@
                     <div class="card-img">
                         <img src="" alt="">
                     </div>
-                </div>
+                </article>
             </div>
         </section>
         <section class="contact">
